[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "metroloj-combiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["mypy"]

[tool.mypy]
python_version = '3.13'
mypy_path = "src"
packages = "metroloj_combiner"
strict = true